# icp_toybox

./: .catkin_lint  .clang-format  .clang-tidy  CMakeLists.txt  README.md  package.xml
data/primitive/: source.pcd  target.pcd
examples/: icp_example.cpp
include/ICP/: ceres_optimizer.hpp  gicp.hpp  icp.hpp  icp_base.hpp  icp_plane.hpp  types.h  utils.h  utils.hpp
scripts/: generate_primitive_point_clouds.py
src/: ceres_optimizer.cpp  gicp.cpp  icp.cpp  icp_base.cpp  icp_plane.cpp  utils.cpp
