<?xml version="1.0"?>
<package format="2">
  <name>icp_toybox</name>
  <version>1.0.0</version>
  <description>ICP Toybox</description>

  <maintainer email="adthoms@ucla.edu">Alexander Thoms</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
