<?xml version="1.0"?>
<package format="2">
  <name>icp_toybox</name>
  <version>1.0.0</version>
  <description>ICP Toybox</description>

  <maintainer email="alexander.thoms@fieldai.com">Alexander Thoms</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
